Mood for interface design start

--- a/design/index.html
+++ b/design/index.html
@@ -4,12 +4,11 @@
     <title>MindLife</title>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/design.css">
   </head>
   <body>
     <div class="heading">
-      <h1>MindLife</h1>
-      <div class="baseline">Trusted solutions for a blissfull life</div>
+      <h1>Mind<strong>Life</strong></h1>
+      <div class="baseline">Trusted solutions for a blissful Life</div>
     </div>
     <div class="gr">
       <div class="grc-2 logo"></div>
@@ -17,11 +16,23 @@
         <li>Healthcare</li>
         <li>Happiness</li>
         <li>Life Appreciation</li>
-        <li>Well Being</li>
+        <li>Well-being</li>
         <li>Collaboration</li>
         <li>Better Life</li>
-        <li class="c_orange">Growth</li>
+        <li>Growth</li>
+        <li class="last">
+          <h1>MIND<strong>LIFE</strong></h1>
+        </li>
       </ul>
     </div>
+    <div class="c_river">
+      <div class="edito">
+        <p>
+          Our purpose is to enhance self-awareness, health, well-being,
+          happiness and bliss for all.
+        </p>
+      </div>
+    </div>
+    <div class="loader"></div>
   </body>
 </html>
