Design update - Random generated graph for home page using snapsvg - Icons : Health/Growth and networking/collaborate

--- a/design/index.html
+++ b/design/index.html
@@ -8,7 +8,10 @@
   <body>
     <div class="heading">
       <h1>Mind<strong>Life</strong></h1>
-      <div class="baseline">Trusted solutions for a blissful Life</div>
+      <div class="baseline">Trusted solutions for a Blissful Life</div>
+    </div>
+    <div class="snap-container">
+      <svg id="snap" viewBox="0 0 1000 562" class="c_river"></svg>
     </div>
     <div class="gr">
       <div class="grc-2 logo"></div>
@@ -31,8 +34,13 @@
           Our purpose is to enhance self-awareness, health, well-being,
           happiness and bliss for all.
         </p>
+        <div class="icons">
+          <div class="icon-heart"></div>
+          <div class="icon-network"></div>
+        </div>
       </div>
     </div>
     <div class="loader"></div>
+    <script src="index.js"></script>
   </body>
 </html>
