--- a/design/index.html
+++ b/design/index.html
@@ -36,11 +36,13 @@
         </p>
         <div class="icons">
           <div class="icon-heart"></div>
+          <div class="icon-human"></div>
           <div class="icon-network"></div>
+          <div class="icon-graph"></div>
         </div>
       </div>
     </div>
-    <div class="loader"></div>
+    <!-- .loader-->
     <script src="index.js"></script>
   </body>
 </html>
