--- a/design/index.html
+++ b/design/index.html
@@ -36,6 +36,7 @@
         </p>
         <div class="icons">
           <div class="icon-heart"></div>
+          <div class="icon-heart-2"></div>
           <div class="icon-human"></div>
           <div class="icon-network"></div>
           <div class="icon-graph"></div>
