--- a/design/index.html
+++ b/design/index.html
@@ -6,27 +6,34 @@
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
-    <div class="heading">
-      <h1>Mind<strong>Life</strong></h1>
-      <div class="baseline">Trusted solutions for a Blissful Life</div>
+    <div class="gr logos">
+      <div class="grc-2 logo-1">
+        <div class="in"></div>
+      </div>
+      <div class="grc-2 logo-2">
+        <div class="in"></div>
+      </div>
+      <div class="grc-2 logo-3">
+        <div class="in"></div>
+      </div>
+      <div class="grc-2 logo-4">
+        <div class="in"></div>
+      </div>
     </div>
+    <ul class="tags">
+      <li>Healthcare</li>
+      <li>Happiness</li>
+      <li>Life Appreciation</li>
+      <li>Well-being</li>
+      <li>Collaboration</li>
+      <li>Better Life</li>
+      <li>Growth</li>
+      <li class="last">
+        <h1>MIND<strong>LIFE</strong></h1>
+      </li>
+    </ul>
     <div class="snap-container">
       <svg id="snap" viewBox="0 0 1000 562" class="c_river"></svg>
-    </div>
-    <div class="gr">
-      <div class="grc-2 logo"></div>
-      <ul class="grc-2 tags">
-        <li>Healthcare</li>
-        <li>Happiness</li>
-        <li>Life Appreciation</li>
-        <li>Well-being</li>
-        <li>Collaboration</li>
-        <li>Better Life</li>
-        <li>Growth</li>
-        <li class="last">
-          <h1>MIND<strong>LIFE</strong></h1>
-        </li>
-      </ul>
     </div>
     <div class="c_river">
       <div class="edito">
@@ -42,6 +49,10 @@
           <div class="icon-graph"></div>
         </div>
       </div>
+    </div>
+    <div class="heading">
+      <h1>Mind<strong>Life</strong></h1>
+      <div class="baseline">Trusted solutions for a Blissful Life</div>
     </div>
     <!-- .loader-->
     <script src="index.js"></script>
