--- a/web/index.html
+++ b/web/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" ng-app="ML">
-  <head>
-    <meta charset="utf-8">
-    <title>MindLife</title>
-  </head>
-  <body>
-
-    <div class="header"></div>
-    <div class="content" ng-view></div>
-    <div class="footer"></div>
-
-    <script src="index.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en" ng-app="ML"><head><meta charset="utf-8"><title>MindLife</title><link rel="stylsheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700"><link rel="stylesheet" href="index.css"></head><body><div class="header"><h1 class="navbar-brand">{{ envVars.website_name }}</h1><nav class="navbar navbar-default navbar-fixed-top"><ul><li ng-repeat="item in nav" ng-class="navClass(item.path)"><a ng-href="#{{item.path}}" ng-bind="item.label"></a></li><li class="last"><form class="navbar-form navbar-right"><div class="input-group"><input type="search" name="searchInput" ng-model="searchString" autocomplete="off" placeholder="Type your query here…" spellcheck="false" required class="form-control input-sm"><span class="form-group-btn"><button type="submit" class="btn btn-primary">Search</button></span></div></form></li></ul><h1>{{activeNav}} {{item.path}}</h1></nav></div><div ng-view class="content"></div><div class="footer"><div class="footer-container"><div ng-bind="envVars.website_name" class="footer-brand"></div><div ng-bind="envVars.company_description" class="footer-em"></div><div class="footer-address"><div ng-bind="envVars.company_address" class="address"></div><div ng-bind="envVars.company_telephone" class="phone"></div><a ng-href="mailto:{{envVars.company_email}}" ng-bind="envVars.company_email" class="mail"></a><nav class="navbar"><ul><li ng-repeat="item in nav" ng-class="navClass(item.path)"><a ng-href="#{{item.path}}" ng-bind="item.label"></a></li></ul></nav></div></div></div><script src="index.js"></script></body></html>
